# finite-diff

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  finitediff.cpp  finitediff.hpp
.github/workflows/: continuous.yml
cmake/: FiniteDiffDependencies.cmake  FiniteDiffDownloadExternal.cmake
cmake/finitediff/: finitediff_warnings.cmake
cmake/recipes/: catch2.cmake  eigen.cmake  spdlog.cmake
src/: finitediff.cpp  finitediff.hpp
tests/: CMakeLists.txt  test_compare_size_mismatch.cpp  test_flatten.cpp  test_gradient.cpp  test_hessian.cpp  test_jacobian.cpp  test_jacobian_tensor.cpp
